--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,16 @@ li {
   list-style: none;
 }
 
+
 /*以下、header.html*/
+
+.right-nav {
+  position: fixed;
+  top: 350px;
+  right: 0px;
+  z-index: 100;
+}
+
 .gn-body p {
   font-size: 10px;
   color: #696969;
